# BotTelegramVideos

./: .env.example  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 16004ec51b8b_initial_migrate.py
app/: bot.py  config.py  database.py  llm.py  models.py  services.py  utils.py
